--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -34,13 +34,14 @@
     padding-top: 30vh;
     width: 100%;
     height: 100vh;
-    background-image: url('../img/hero/hero-1x-mob.png');
+    background-image: url(../img/webp/modal1x.webp);
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 @media screen and (min-resolution:192dpi) {
     .mobile-menu {
-        background-image: url(../img/hero/hero-2x-mob.png);
+        background-image: url(../img/webp/modal2x.webp);
     }
 }
 
