--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -53,7 +53,9 @@
                     </p>
                 </li>
             </ul>
-            <a class="benefits-anchor-link" href="#footer">Order the project</a>
+            <a class="benefits-anchor-link" href="#work_together"
+                >Order the project</a
+            >
         </div>
     </div>
 </section>
