--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,18 +1,24 @@
 <section class="section reviews">
-  <div class="container">
-    <h2 class="section-title">reviews</h2>
-    <ul class="cards"></ul>
-    <nav class="arrows">
-      <button class="arrow disabled">
-        <svg width="24" height="24" class="svg-left disabled">
-          <use href="./img/sprite.svg#icon-arrow-narrow-left"></use>
-        </svg>
-      </button>
-      <button class="arrow">
-        <svg width="24" height="24" class="svg-right">
-          <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
-        </svg>
-      </button>
-    </nav>
-  </div>
+    <div class="container">
+        <h2 class="section-title">reviews</h2>
+        <div class="swiper">
+            <ul class="swiper-wrapper cards"></ul>
+            <nav class="arrows">
+                <button class="arrow-right">
+                    <svg width="24" height="24" class="svg-left disabled">
+                        <use
+                            href="./img/sprite.svg#icon-arrow-narrow-left"
+                        ></use>
+                    </svg>
+                </button>
+                <button class="arrow-left">
+                    <svg width="24" height="24" class="svg-right">
+                        <use
+                            href="./img/sprite.svg#icon-arrow-narrow-right"
+                        ></use>
+                    </svg>
+                </button>
+            </nav>
+        </div>
+    </div>
 </section>
