--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,4 +1,4 @@
-<section id="covers">
+<section id="covers" class="section">
     <div class="container">
         <h2 class="visually-hidden">Covers</h2>
         <ul class="projects-list">
