--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,8 +2,8 @@
     <div class="container header-container">
         <a class="header-logo" href="#">
             <img
-                srcset="/img/logo-1x.png 1x, /img/logo-2x.png 2x"
-                src="/img/logo-1x.png"
+                srcset="/img/logo-1x.webp 1x, /img/logo-2x.webp 2x"
+                src="/img/logo-1x.webp"
                 alt="logo"
             />
             <svg class="header-svg-logo" width="84" height="19">
