--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -108,9 +108,7 @@
                                     width="20"
                                     height="20"
                                 >
-                                    <use
-                                        href="../img/sprite.svg#icon-arrow-up"
-                                    ></use>
+                                    <use href="/img/sprite.svg#icon-arrow-up"></use>
                                 </svg>
                                 <svg
                                     class="about-icon about-icon-down"
@@ -177,7 +175,7 @@
                 </li>
             </ul>
         </div>
-        <div class="accordion-toggle">
+        <div class="accordion-toggle skills">
             <ul class="skills-list">
                 <li class="skills-list-items chosen">HTML/CSS</li>
                 <li class="skills-list-items">JavaScript</li>
@@ -193,9 +191,7 @@
                         width="40"
                         height="40"
                     >
-                        <use
-                            href="/img/sprite.svg#icon-arrow-narrow-right"
-                        ></use>
+                        <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
                     </svg>
                 </div>
             </button>
