--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -21,6 +21,7 @@ color: rgba(250, 250, 250, 0.4);
     background-color: aliceblue;
     padding: 32px 32px;
     height: auto;
+    border-radius: 24px 24px 0 0;
 }
 
 .tags-panel{
@@ -209,7 +210,7 @@ height: 68px;
 }
 .div-list-p{
    
-    
+    border-radius:  24px 0  0 24px;
     padding-left: 32px;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -218,6 +219,7 @@ height: 68px;
 }
 .all-div{
     display: flex;
+    
 }
 
 .tags-panel{
