--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -38,8 +38,10 @@
                 >
             </li>
             <li class="hero-list-item">
-                <a class="hero-list-link" href="mailto:test@gmail.com"
-                    >test@gmail.com</a
+                <a
+                    class="hero-list-link link-email"
+                    href="mailto:lloydjefferson@gmail.com"
+                    >lloydjefferson@gmail.com</a
                 >
             </li>
         </ul>
