--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -40,11 +40,20 @@
 .hero-list-item {
     display: flex;
     align-items: center;
+    justify-content: center;
     border: 1px solid rgba(250, 250, 250, 0.2);
     border-radius: 60px;
-    padding: 10px 12px;
+    padding: 9px 10px;
     height: 37px;
     transition: border 250ms linear;
+}
+
+.hero-list-item:nth-child(-n+4) {
+    width: 10.5%;
+}
+
+.hero-list-item:last-child {
+    max-width: 52%;
 }
 
 .hero-list-item:hover,
@@ -57,6 +66,11 @@
     font-size: 14px;
     letter-spacing: -0.02em;
     color: #fafafa;
+    
+}
+.link-email {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /*Планшетна версія*/
